<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="reject">拒绝</string>
    <string name="empty_msg_center_msg">没有消息提醒</string>
    <string name="empty_msg_center_desc"><b>您收到医生回复、建议或报告更新，</b>都会在这里收到消息提醒</string>
    <string name="empty_report_msg">暂无电子报告</string>
    <string name="empty_evaluation_msg">暂无测评记录</string>
    <string name="empty_evaluation_desc">了解您的睡眠健康及心理状况</string>
    <string name="empty_404_msg">很抱歉！</string>
    <string name="empty_404_desc">您要访问的页面不存在</string>
    <string name="empty_network_error_msg">网络连接异常</string>
    <string name="empty_network_error_desc">请查看网络设置或稍后重试</string>
    <string name="empty_advisory_msg">暂无相关记录</string>
    <string name="empty_advisory_desc">无购买记录，可向患者推荐该服务</string>
    <string name="no_data_hint">这里空空如也~</string>
    <string name="loading_dot">Loading&#8230;</string>
    <string name="system_maintain">系统维护</string>
    <string name="system_maintain_desc">系统正在维护中，请稍后重试</string>
    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="homepage">首页</string>
    <string name="patient">患者</string>
    <string name="mine">我的</string>
    <string name="login_with_space_inside">登 录</string>
    <string name="hello_comment">您好，</string>
    <string name="welcome_hint">欢迎使用速眠医生，请登录</string>
    <string name="input_phone_hint">请输入手机号码</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="input_captcha_hint">请输入验证码</string>
    <string name="send_captcha">发送验证码</string>
    <string name="captcha_already_sent">%ds</string>
    <string name="app_user_agreement">速眠医生用户协议</string>
    <string name="wechat_login">微信登录</string>
    <string name="password_login">密码登录</string>
    <string name="captcha_login">验证码登录</string>
    <string name="bind_mobile">绑定手机</string>
    <string name="register">注册</string>
    <string name="register_authentication">注册认证</string>
    <string name="cellphone_verification">手机验证</string>
    <string name="set_password" tools:ignore="ExtraTranslation">设置密码</string>
    <string name="doctor_authentication">医生认证</string>
    <string name="identity_authentication">身份认证</string>
    <string name="authentication_center">认证中心</string>
    <string name="hospital_name">医院名</string>
    <string name="tel_consult">电话咨询</string>
    <string name="cbti_progress">CBTI进度</string>
    <string name="add_patient">添加患者</string>
    <string name="phone_counseling">电话咨询</string>
    <string name="today_has_no_booking">今日暂无预约</string>
    <string name="password_length_invalidate">密码长度需在%1$d-%2$d位之间</string>
    <string name="phone_number_invalid">电话号码不合法</string>
    <string name="captcha_invalidate">验证码长度不合法</string>
    <string name="booking_item_date_pattern">MM月dd日</string>
    <string name="booking_item_date_pattern_today">MM月dd日（今日）</string>
    <string name="no_more_booking_history_hint">- 没有更多历史预约信息 -</string>
    <string name="no_more_booking_hint">- 当前已是最新预约信息 -</string>
    <string name="booking_detail">预约详情</string>
    <string name="booking_information">预约信息</string>
    <string name="patient_record">患者档案</string>
    <string name="order_state">订单状态</string>
    <string name="patient_name">患者姓名</string>
    <string name="booking_time">预约时间</string>
    <string name="booking_duration">预约时长</string>
    <string name="advisory_question">咨询问题</string>
    <string name="supplementary_instruction">补充说明</string>
    <string name="anonymous_call">匿名回拨</string>
    <string name="waiting_confirm">待确认</string>
    <string name="already_confirmed">已确认</string>
    <string name="already_closed">已关闭</string>
    <string name="hanging">挂起中</string>
    <string name="already_finish">已完成</string>
    <string name="call_or_not">是否回拨电话？</string>
    <string name="are_your_sure_to_call_the_patient">您确认给患者%s回拨电话么</string>
    <string name="waiting_for_calling">等待通话</string>
    <string name="waiting_for_calling_hint">通话正在接通，请耐心等待</string>
    <string name="weixin_scan">微信扫一扫</string>
    <string name="weixin_scan_bind_doctor_desc">微信扫一扫，绑定医生，及时获取医生反馈提醒</string>
    <string name="add_xx_doctor">添加%s医生</string>
    <string name="one_key_share_to_patient">一键分享给患者</string>
    <string name="share_doctor_qr_title">%s%s邀您一起了解好眠方案CBTI</string>
    <string name="share_doctor_qr_desc">让我们跟随%s一起改善自己的睡眠情况吧</string>
    <string name="wechat_friend">微信好友</string>
    <string name="wechat_circle">朋友圈</string>
    <string name="modify_cellphone">修改手机号码</string>
    <string name="modify_cellphone_hint">请联系速眠医生助理修改手机号码</string>
    <string name="free_anonymous_call">免费匿名电话</string>
    <string name="system_call_at_the_same_time">系统同时呼叫</string>
    <string name="start_call">开始通话</string>
    <string name="no_booking_no_call">暂无预约，无法通话</string>
    <string name="none_nickname">匿名</string>
    <string name="person_info">个人信息</string>
    <string name="person_introduction">个人简介</string>
    <string name="setting">设置</string>
    <string name="avatar">头像</string>
    <string name="my_service">我的服务</string>
    <string name="name">姓名</string>
    <string name="hospital">医院</string>
    <string name="department">科室</string>
    <string name="job_title">职称</string>
    <string name="input_name">请输入真实姓名</string>
    <string name="logout">退出登录</string>
    <string name="empty_error_tips_two">分享二维码，添加您的患者</string>
    <string name="empty_error_tips_one">暂无患者列表</string>
    <string name="error_unknown">未知错误</string>
    <string name="not_set_yet">未设置</string>
    <string name="not_choose_yet">未选择</string>
    <string name="select_job_title">选择职称</string>
    <string name="select_department">选择科室</string>
    <string name="logout_title_hint">退出后不会删除任何历史数据，下次登录依然可以使用此账号</string>
    <string name="title_modify_name">修改姓名</string>
    <string name="title_modify_hospital">修改医院</string>
    <string name="title_modify_department">修改医院</string>
    <string name="setting_logout_hint">退出登录</string>
    <string name="setting_modify_pwd_hint">修改密码</string>
    <string name="setting_new_pwd_hint">请输入新密码</string>
    <string name="setting_re_set_new_pwd_hint">再次输入新密码</string>
    <string name="setting_set_old_pwd_hint">请输入旧密码</string>
    <string name="setting_set_pwd_success_hint">密码设置成功</string>
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="check_new_pwd">确认新密码</string>
    <string name="pwd_error_hint">密码格式不对,请输入正确的密码</string>
    <string name="verify_pwd_error_hint">两次输入的密码不一致</string>
    <string name="submit">确定</string>
    <string name="logout_success">退出账号成功</string>
    <string name="no_binding_wechat">未绑定</string>
    <string name="unbind_wechat_success">解绑微信成功</string>
    <string name="binding_wechat_success">绑定微信成功</string>
    <string name="are_you_sure_bind_wechat_title">是否绑定微信？</string>
    <string name="are_you_sure_bind_wechat_message">绑定后，可使用微信账号登录睡眠医生</string>
    <string name="are_you_sure_unbind_wechat_title">确定解绑微信？</string>
    <string name="are_you_sure_unbind_wechat_message">解绑后，你将无法使用微信账号登录</string>
    <string name="unbind">解绑</string>
    <string name="binding">绑定</string>
    <string name="wechat_login_canceled">微信登录取消</string>
    <string name="not_installed_wechat">当前手机没有安装微信</string>
    <string name="wechat_not_install">微信未安装</string>
    <string name="please_input_your_name">请输入您的姓名</string>
    <string name="please_input_your_hospital">请输入所在医院</string>
    <string name="please_upload_your_doctor_license">上传医生身份证明材料</string>
    <string name="please_upload_your_counselor_license">请上传咨询师身份证明材料</string>
    <string name="please_upload_your_doctor_license_desc">可上传工作证、职业证、资格证、专业技术资格证(职称证)</string>
    <string name="please_upload_your_counselor_license_desc">可上传执业证、资格证、专业技术资格证（职称证）</string>
    <string name="submit_audit">提交审核</string>
    <string name="please_choose_department">请选择科室</string>
    <string name="please_choose_job_title">请选择职称</string>
    <string name="please_upload_doctor_license">请上传医师执照</string>
    <string name="please_upload_identity_material">请上传身份证明材料</string>
    <string name="please_input_name">请填写姓名</string>
    <string name="please_input_counselor_qualification">请选择专业资质</string>
    <string name="please_input_counselor_experience">请选择从业经验</string>
    <string name="please_input_counselor_case_hours">请填写累积个案时长</string>
    <string name="counselor_case_hours_too_long">累积个案时长不能大于300，000小时</string>
    <string name="take_photo">拍照</string>
    <string name="select_picture_from_album">从手机相册选择</string>
    <string name="str_request_camera_message">请求获取相机权限</string>
    <string name="submit_success">提交成功</string>
    <string name="register_success_desc">审核认证需要1个工作日，确认后会通过短信通知您。</string>
    <string name="sumian_doctor">速眠医生</string>
    <string name="none_market">"您的手机没有安装应用市场!"</string>
    <string name="soft_upgrade">软件升级</string>
    <string name="version_upgrade">版本更新</string>
    <string name="version_upgrade_title">新版本更新啦～</string>
    <string name="go_to_experience">立即体验</string>
    <string name="current_version">当前版本号:</string>
    <string name="new_version">最新版本号:</string>
    <string name="this_is_last_version">当前已是最新版本</string>
    <string name="have_a_new_version">有新版本，请立即体验吧</string>
    <string name="force_upgrade_version">当前版本太低，请到应用市场升级后再使用</string>
    <string name="open_notification">开启通知</string>
    <string name="open_notification_and_receive_doctor_response">开启通知，及时获取医生回复</string>
    <string name="all_read">全部已读</string>
    <string name="notification_center">消息中心</string>
    <string name="open_notification_push">开启消息推送通知</string>
    <string name="open_notification_push_hint">第一时间接收消息更新通知</string>
    <string name="notification_list_empty_title">没有消息提醒</string>
    <string name="notification_list_empty_desc">您收到医生回复、建议或报告更新，\n都会在这里收到消息提醒</string>
    <string name="go_open">去开启</string>
    <string name="xx_min">%d分钟</string>
    <string name="operation_warning">操作警告</string>
    <string name="operation_success">操作成功</string>
    <string name="operation_fail">操作失败</string>
    <string name="logout_failed_please_check_network">退出登录失败，请检查网络</string>
    <string name="contact_support_staff">联系客服</string>
    <string name="update_booking_hint">如需修改订单，请联系速眠工作人员</string>
    <string name="invite_code_optional">邀请码 (非必填)</string>
    <string name="modify_patient_tags">修改标签</string>
    <string name="send_scale">发送量表</string>
    <string name="send_follow_up_plan">发送随访计划</string>
    <string name="closed">已关闭</string>
    <string name="cancelled">已取消</string>
    <string name="first_question">第一次提问</string>
    <string name="doc_advisory">图文咨询</string>
    <string name="note_evaluate">日记评估</string>
    <string name="complete">完成</string>
    <string name="type">类型</string>
    <string name="trade_time">交易时间</string>
    <string name="serial_number">流水单号</string>
    <string name="content">内容</string>
    <string name="_0_00">0.00</string>
    <string name="approve_time">审核时间</string>
    <string name="progress">进度</string>
    <string name="apply_time">申请时间</string>
    <string name="please_wait_one_to_three_day_blala" tools:ignore="TypographyDashes">3~5个工作日内处理，请耐心等候，如有疑问请咨询：\n400-668-8795</string>
    <string name="withdraw_is_processing">兑换处理中</string>
    <string name="it_will_cost_about_3_day_please_wait">预计3~5个工作日内完成审核，请耐心等候</string>
    <string name="remark">备注</string>
    <string name="input_invite_code_hint">请输入邀请码（非必填）</string>
    <string name="set_invite_code_explain">填写销售人员提供的邀请码，如无可跳过</string>
    <string name="cbti">CBTI</string>
    <string name="any_question_please_call_xxx" tools:ignore="TypographyDashes">如有疑问请咨询：400–668-8795</string>
    <string name="predict_in_account_time">预计入账时间</string>
    <string name="explain">说明</string>
    <string name="jifen">积分</string>
</resources>