<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_padding"
    android:paddingEnd="@dimen/activity_horizontal_padding">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_48"
        android:layout_marginTop="@dimen/space_72"
        android:layout_marginBottom="@dimen/space_30"
        tools:layout_marginTop="@dimen/space_10">

        <EditText
            android:id="@+id/et_phone"
            style="@style/SumianEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_height"
            android:hint="@string/input_phone_hint"
            android:inputType="phone"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/iv_phone_clear"
            style="@style/EditTextClearIv"
            android:contentDescription="@null" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_captcha"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_48"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/space_48"
            android:layout_marginEnd="8dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_captcha"
                style="@style/SumianEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/et_height"
                android:layout_marginEnd="8dp"
                android:hint="@string/input_captcha_hint"
                android:inputType="numberDecimal"
                tools:ignore="Autofill" />

            <ImageView
                android:id="@+id/iv_captcha_clear"
                style="@style/EditTextClearIv"
                android:contentDescription="@null" />
        </FrameLayout>

        <com.sumian.sddoctor.widget.CountDownTextView
            android:id="@+id/tv_send_captcha"
            style="@style/SumianButton"
            android:layout_width="@dimen/space_110"
            android:layout_height="@dimen/bt_height"
            app:cdtv_count_down_text="@string/captcha_already_sent"
            app:cdtv_count_down_time="@integer/captcha_cold_duration"
            app:cdtv_normal_text="@string/send_captcha" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_invite_code"
        style="@style/SumianEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_marginTop="@dimen/space_30"
        android:hint="@string/invite_code_optional"
        android:inputType="text"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_next_step"
        style="@style/SumianButton"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/space_40"
        android:text="@string/complete" />
</LinearLayout>
